--- a/whilelong2.html
+++ b/whilelong2.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let sout, i, j;
+    sout = "<table border='1' width='8" +
+        "00' cellspacing='0' cellpadding='3'>";
+    i =1;
+    j = 2;
+    while (i <= 9) {
+        sout = sout + "<tr>";
+        while (j <= 9) {
+            sout = sout + "<td>" + j +"*"+i+"="+(i * j) + "</td>";
+            j++;
+        }
+        sout = sout + "</tr>";
+        j = 2;
+        i++;
+    }
+    sout = sout + "</table>";
+    document.write(sout);
+</script>
 </body>
 </html>
